[OG-92] Apply suggestions from comments